# webchanges

./: .bandit  .bumpversion.cfg  .bumpversion.txt  .coverage  .coverage.bat  .coveragerc  .deploy.bat  .flake8  .gitattributes  .gitignore  .isort.cfg  .pre-commit-config.yaml  .readthedocs.yaml  .rstcheck.cfg  .test.bat  .travis.yml  CHANGELOG.rst  CONTRIBUTING.rst  COPYING  Dockerfile  LICENSE  LICENSE.md  MANIFEST.in  README.rst  RELEASE.md  RELEASE.rst  SECURITY.md  WISHLIST.md  build_manpage.py  codecov.yml  get_parser.py  mypy.ini  pyproject.toml  pytest.ini  requirements-free-threaded.txt  requirements.txt  requirements_deploy.txt  requirements_free-threaded.txt  requirements_testing.txt  setup.cfg  (+3 more)
.github/: dependabot.yaml  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: .gemini-dispatch.yml  .gemini-invoke.yml  cflite_pr.yml  ci-cd.yaml  codeql.yml  dependency-review.yml  gemini-dispatch.yml  gemini-invoke.yml  gemini-issue-automated-triage.yml  gemini-pr-review.yml  gemini-review.yml  gemini-scheduled-triage.yml  gemini-triage.yml  publish_to_pypi.yml  scorecard.yml
docs/: Makefile  advanced.rst  changelog.rst  cli.rst  cli_help.txt  conf.py  configuration.rst  contributing.rst  dependencies.rst  diff_filters.rst  differs.rst  examples.rst  filters.rst  hooks.rst  html_reports.html  index.rst  inheritance_ascii_tree.py  introduction.rst  jobs.rst  license.rst  make_html.bat  migration.rst  reporters.rst  reports.rst  requirements.txt  under_the_hood.rst  upgrading.rst  yaml_syntax.rst
docs/_api/: exceptions.rst  webchanges._vendored.rst  webchanges.browser.rst  webchanges.cli.rst  webchanges.command.rst  webchanges.config.rst  webchanges.filters.rst  webchanges.handler.rst  webchanges.jobs.rst  webchanges.jobs_browser.rst  webchanges.mailer.rst  webchanges.main.rst  webchanges.reporters.rst  webchanges.rst  webchanges.storage.rst  webchanges.storage_minidb.rst  webchanges.util.rst  webchanges.worker.rst
docs/_static/css/: webchanges.css
docs/source/: cli.rst  conf.py  contents.rst  contributing.rst  dependencies.rst  filters.rst  introduction.rst  reporters.rst  reports.rst
schemas/: config.schema.json  jobs.schema.json
share/man/man1/: webchanges.1
tests/: __init___test.py  command_test.py  conftest.py  docs_filters_test.py  docs_hooks_test.py  filters_test.py  handler_generate_diff_test.py  handler_test.py  jobs_test.py  reporters_test.py  requirements_pre-commit.txt  requirements_pytest.txt  requirements_pytest_312.txt  requirements_pytest_free-threaded.txt  requirements_testing.txt  storage_test.py  test_-build_docs.py  test_-flake8.py  test___init__.py  test_cli.py  test_command.py  test_differs.py  test_docs_filters.py  test_docs_hooks.py  test_filters.py  test_handler.py  test_handler_generate_diff.py  test_jobs.py  test_reporters.py  test_storage.py  test_util.py  util_test.py
tests/data/: cache-urlwatch_legacy.db  cache.db.bak  command_jobs.yaml  config.yaml  doc_filter_testdata.yaml  doc_hooks_testdata.yaml  docs_filters_testdata.yaml  docs_hooks_jobs.yaml  docs_hooks_testdata.yaml  filter_tests.yaml  filters_test.yaml  filters_testdata.yaml  hooks.py  hooks_example.py  hooks_test.py  invalid-url.yaml  jobs-disabled.yaml  jobs-duplicate_url.broken_yaml  jobs-echo_test.yaml  jobs-invalid_url.yaml  jobs-is_shell_job.yaml  jobs-storage-test.yaml  jobs-time.yaml  jobs-use_browser.yaml  jobs-use_browser_pw.yaml  jobs.yaml  urls.txt
tools/: get_manpages_parser.py  rst_release_to_md.py  test_packaging_version.py  test_rst_release_to_md.py  update_schema_hashes.py
webchanges/: __init__.py  __main__.py  browser.py  cli.py  command.py  config.py  differs.py  filters.py  handler.py  jobs.py  jobs_browser.py  mailer.py  main.py  reporters.py  storage.py  storage_minidb.py  util.py  worker.py  xmpp.py
webchanges/_resources/: .config.schema.sha256  .jobs.schema.sha256  config.schema.json  jobs.schema.json
webchanges/_vendored/: case_insensitive_dict.py  headers.py  packaging_version.py  typeguard.py
webchanges/filters/: __init__.py  _base.py  _document.py  _encoding.py  _html.py  _shell.py  _text.py
webchanges/jobs/: __init__.py  _base.py  _browser.py  _exceptions.py  _shell.py  _url.py
webchanges/reporters/: __init__.py  _base.py  _browser.py  _chat.py  _email.py  _filter.py  _stdout.py  _system.py  _web.py
webchanges/storage/: __init__.py  _base.py  _config.py  _minidb.py  _redis.py  _sqlite3.py  _ssdb.py  _yaml.py
